@@ -9,7 +9,6 @@ import java.util.regex.Pattern;
 
 import org.apache.commons.lang.ArrayUtils;
 
-import io.arkx.framework.Account;
 import io.arkx.framework.Config;
 import io.arkx.framework.commons.collection.Mapx;
 import io.arkx.framework.commons.util.DateUtil;
@@ -41,11 +40,11 @@ public class CronMonitor extends TimerTask {
 		
 		if (!this.isRunning) {
 			
-			Account.UserData u = new Account.UserData();
-			u.setBranchInnerCode("0000");
-			u.setUserName("CronTask");
-			u.setLogin(true);
-			Account.setCurrent(u);
+//			Account.UserData u = new Account.UserData();
+//			u.setBranchInnerCode("0000");
+//			u.setUserName("CronTask");
+//			u.setLogin(true);
+//			Account.setCurrent(u);
 			
 			runMain();
 		}
@@ -104,7 +103,7 @@ public class CronMonitor extends TimerTask {
 			int v = Integer.parseInt(exp);
 			v = v > max ? max : v;
 			v = v < min ? min : v;
-			list.add(new Integer(v));
+			list.add(Integer.valueOf(v));
 		} else if (P2.matcher(exp).matches()) {
 			String[] arr = exp.split("\\-");
 			int[] is = { Integer.parseInt(arr[0]), Integer.parseInt(arr[1]) };
@@ -114,13 +113,13 @@ public class CronMonitor extends TimerTask {
 			is[1] = (is[1] < min ? min : is[1]);
 			if (is[0] > is[1]) {
 				for (int j = is[0]; j <= max; j++) {
-					list.add(new Integer(j));
+					list.add(Integer.valueOf(j));
 				}
 				for (int j = min; j <= is[1]; j++)
-					list.add(new Integer(j));
+					list.add(Integer.valueOf(j));
 			} else {
 				for (int j = is[0]; j <= is[1]; j++)
-					list.add(new Integer(j));
+					list.add(Integer.valueOf(j));
 			}
 		} else if (P3.matcher(exp).matches()) {
 			String[] arr = exp.split(",");
@@ -135,16 +134,16 @@ public class CronMonitor extends TimerTask {
 					tmp[1] = (tmp[1] < min ? min : tmp[1]);
 					if (tmp[0] > tmp[1]) {
 						for (int j = tmp[0]; j <= max; j++) {
-							list.add(new Integer(j));
+							list.add(Integer.valueOf(j));
 						}
 						for (int j = min; j <= tmp[1]; j++)
-							list.add(new Integer(j));
+							list.add(Integer.valueOf(j));
 					} else {
 						for (int j = tmp[0]; j <= tmp[1]; j++)
-							list.add(new Integer(j));
+							list.add(Integer.valueOf(j));
 					}
 				} else {
-					list.add(new Integer(Integer.parseInt(str)));
+					list.add(Integer.valueOf(Integer.parseInt(str)));
 				}
 			}
 		} else if (P4.matcher(exp).matches()) {
@@ -168,10 +167,10 @@ public class CronMonitor extends TimerTask {
 				cm = is[1] + len;
 			}
 			for (int i = is[0]; i <= cm; i += step)
-				list.add(new Integer(i > max ? i - len : i));
+				list.add(Integer.valueOf(i > max ? i - len : i));
 		} else if (exp.equals("*")) {
 			for (int i = min; i <= max; i++)
-				list.add(new Integer(i));
+				list.add(Integer.valueOf(i));
 		} else {
 			throw new CronExpressionException("Invalid cron expression:" + exp);
 		}
